hero section in progress

--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PlanetPlants</title>
+    <link href="./styles/desktop.css" rel="stylesheet" />
+    <link href="./styles/tablet.css" rel="stylesheet" />
+    <link href="./styles/mobile.css" rel="stylesheet" />
 </head>
+
 <body>
-    
+    <section class="hero">
+        <div class="container">
+            <header>
+                <a href="#">
+                    <img class="logo" src="./images/icons/logo.svg" alt="Logo" />
+                </a>
+                <a href="#">
+                    <img class="hamburger" src="./images/icons/icon-hamburger.svg" alt="Menu" />
+                </a>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>Cathegory 1</li>
+                        <li>Cathegory 2</li>
+                        <li>Cathegory 3</li>
+
+                    </ul>
+                </nav>
+                <div class="shop">
+
+                </div>
+                <div class="text">
+                    <h2></h2>
+                    <h1></h1>
+                    <p></p>
+                    <button></button>
+                </div>
+            </header>
+
+
+        </div>
+    </section>
 </body>
+
 </html>
