hero section in progress

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlanetPlants</title>
+    <title>House of Plants</title>
     <link href="./styles/desktop.css" rel="stylesheet" />
     <link href="./styles/tablet.css" rel="stylesheet" />
     <link href="./styles/mobile.css" rel="stylesheet" />
@@ -16,7 +16,7 @@
         <div class="container">
             <header>
                 <a href="#">
-                    <img class="logo" src="./images/icons/logo.svg" alt="Logo" />
+                    <img class="logo" src="/images/icons/logo.svg" alt="Logo" />
                 </a>
                 <a href="#">
                     <img class="hamburger" src="./images/icons/icon-hamburger.svg" alt="Menu" />
