hero section in progress

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <header>
                 <a href="#">
-                    <img class="logo" src="/images/icons/logo.svg" alt="Logo" />
+                    <img class="logo" src="images/icons/logo.png" alt="logo">
                 </a>
                 <a href="#">
                     <img class="hamburger" src="./images/icons/icon-hamburger.svg" alt="Menu" />
