--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
                 <div class="shop">
 
                 </div>
-                <div class="text">
-                    <h2></h2>
-                    <h1></h1>
-                    <p></p>
-                    <button></button>
-                </div>
             </header>
+            <div class="text">
+                <h1>Bring Your Home To Life</h1>
+
+                <p>Adding plant life to your home can instantly transform familiar rooms into something exotic &
+                    otherworldly, bringing with it a sense of the wild & unknown. Creating a vibe of who you are is what
+                    we at Leafy Plants are all about, with a selection of house plants on sale to help grow your perfect
+                    jungle display.</p>
+                <button>See all products</button>
+            </div>
+
 
 
         </div>
