--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House of Plants</title>
+    <link rel="icon" type="image/png" sizes="32*32" href="/FINAL-PROJECT/images/icons/logo.png">
     <link href="./styles/desktop.css" rel="stylesheet" />
     <link href="./styles/tablet.css" rel="stylesheet" />
     <link href="./styles/mobile.css" rel="stylesheet" />
@@ -24,9 +25,9 @@
                 <nav>
                     <ul>
                         <li>Home</li>
-                        <li>Cathegory 1</li>
-                        <li>Cathegory 2</li>
-                        <li>Cathegory 3</li>
+                        <li>Easy Care</li>
+                        <li>Low Light Plants</li>
+                        <li>Pet Friendly Plants</li>
 
                     </ul>
                 </nav>
@@ -43,10 +44,42 @@
                     jungle display.</p>
                 <button>See all products</button>
             </div>
-
-
-
         </div>
+    </section>
+    <section class="hero-categories">
+        <div class="categories">
+            <div class="category">
+                <img src="/images/images for categories/alocacia first category.png" alt="">
+                <h4>Easy Care</h4>
+            </div>
+            <div class="category">
+                <img src="/images/images for categories/Calathea second category.png" alt="">
+                <h4>Low Light Plants</h4>
+            </div>
+            <div class="category">
+                <img src="/images/images for categories/pngegg.png" alt="">
+                <h4>Pet Friendly Plants</h4>
+            </div>
+        </div>
+        <div class="products">
+            <div class="pothos">
+                <img src="" alt="">
+                <div class="pothos-description"></div>
+            </div>
+            <div class="calathea-orbifolia">
+                <h4>Calathea Orbifolia</h4>
+                <button></button>
+            </div>
+            <div class="calathea-zebrina">
+                <img src="" alt="">
+                <div class="calathea-zebrina-description">
+                    <h4>Calathea Zebrina</h4>
+                    <button></button>
+                </div>
+
+            </div>
+        </div>
+
     </section>
 </body>
 
