--- a/index.html
+++ b/index.html
@@ -61,26 +61,27 @@
                 <h4>Pet Friendly Plants</h4>
             </div>
         </div>
-        <div class="products">
-            <div class="pothos">
-                <img src="" alt="">
-                <div class="pothos-description"></div>
-            </div>
-            <div class="calathea-orbifolia">
-                <h4>Calathea Orbifolia</h4>
+    </section>
+    <section class="products">
+        <div class="pothos">
+            <img src="" alt="">
+            <div class="pothos-description"></div>
+        </div>
+        <div class="snake-plant">
+            <h4>Snake Plant</h4>
+            <button></button>
+        </div>
+        <div class="calathea-zebrina">
+            <img src="" alt="">
+            <div class="calathea-zebrina-description">
+                <h4>Calathea Zebrina</h4>
                 <button></button>
             </div>
-            <div class="calathea-zebrina">
-                <img src="" alt="">
-                <div class="calathea-zebrina-description">
-                    <h4>Calathea Zebrina</h4>
-                    <button></button>
-                </div>
 
-            </div>
         </div>
-
     </section>
+
+
 </body>
 
 </html>
