added categories on landing page

--- a/index.html
+++ b/index.html
@@ -63,19 +63,23 @@
         </div>
     </section>
     <section class="products">
-        <div class="pothos">
-            <img src="" alt="">
-            <div class="pothos-description"></div>
+        <div class="zzplant">
+            <img src="/images/product 2 zz plant/pngwing.com.png" alt="">
+            <div class="zzplant-description">
+                <h3>ZZ Plant</h3>
+                <p>No green thumb required: This popular houseplant thrives with minimal care</p>
+                <button>See Plant</button>
+            </div>
         </div>
         <div class="snake-plant">
-            <h4>Snake Plant</h4>
-            <button></button>
+            <h3>Snake Plant</h3>
+            <button>See Plant</button>
         </div>
-        <div class="calathea-zebrina">
-            <img src="" alt="">
-            <div class="calathea-zebrina-description">
-                <h4>Calathea Zebrina</h4>
-                <button></button>
+        <div class="pothos">
+            <img src="/images/product 4 Silver Satin Pothos/5e985d6486081af8d83f15d76adeace0.jpg_460x460q80.jpg" alt="">
+            <div class="pothos-description">
+                <h3>Pothos Silver Satin</h3>
+                <button>See plant</button>
             </div>
 
         </div>
