section shop-description done

--- a/index.html
+++ b/index.html
@@ -76,13 +76,22 @@
             <button>See Plant</button>
         </div>
         <div class="pothos">
-            <img src="/images/product 4 Silver Satin Pothos/5e985d6486081af8d83f15d76adeace0.jpg_460x460q80.jpg" alt="">
+            <div class="pothos-background">
+              
+            </div>
             <div class="pothos-description">
                 <h3>Pothos Silver Satin</h3>
                 <button>See plant</button>
             </div>
 
         </div>
+    </section>
+    <section class="shop-description">
+        <div class="description">
+            <h3>Decorate your home with plants</h3>
+            <p>Not only are house plants a welcome addition to any home interior, they are beneficial for your health as well. You can add color and life to any room, purify the air in your house, and breathe better with indoor house plants. They are available in a wide variety of shapes, sizes, and colors, there is a houseplant to match every aesthetic and design scheme.</p>
+        </div>
+        <img src="/images/shop-description.jpg" alt="">
     </section>
 
 
