--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="#">
                     <img class="logo" src="images/icons/logo.png" alt="logo">
                 </a>
-                <a href="#">
-                    <img class="hamburger" src="./images/icons/icon-hamburger.svg" alt="Menu" />
+                <a href="#" class="hamburger">
+                    <img  src="./images/icons/icon-hamburger.svg" alt="Menu" />
                 </a>
                 <nav>
                     <ul>
