--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                     otherworldly, bringing with it a sense of the wild & unknown. Creating a vibe of who you are is what
                     we at Leafy Plants are all about, with a selection of house plants on sale to help grow your perfect
                     jungle display.</p>
-                <button >See all products</button>
+                    <a href="/products.html"><button >See all products</button></a>
+                
+                    
             </div>
         </div>
     </section>
