--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </a>
                 <nav>
                     <ul>
-                        <li>Home</li>
+                        <li><a href="/index.html" >Home</a></li>
                         <li>Easy Care</li>
                         <li>Low Light Plants</li>
                         <li>Pet Friendly Plants</li>
