--- a/products.html
+++ b/products.html
@@ -77,7 +77,7 @@
         <div id="item-list">
             <!-- <div class="item">
                 <img src="/images/product 1 alocasia black velvet/main.jpg" alt="">
-                <h2 class="title">Alocasia Black Velvet </h2>
+                <h2 class="itemTitle">Alocasia Black Velvet </h2>
                 <p>$599.00</p>
                 <button>See product</button>
             </div>
@@ -152,5 +152,5 @@
 
 
 </body>
-<img src="/images/product 4 Silver Satin Pothos/main.webp" alt="">
+
 </html>
