products page to be updated

--- a/products.html
+++ b/products.html
@@ -72,7 +72,7 @@
         <div class="search">
 
             <label for="searchbox">Search</label>
-            <input type="search" oninput="liveSearch()" id="searchbox">
+            <input type="search" oninput="liveSearch()" id="searchbox" placeholder="Search...">
         </div>
         <div id="item-list">
             <!-- <div class="item">
