product page to be updated

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="zzplant-description">
                 <h3>ZZ Plant</h3>
                 <p>No green thumb required: This popular houseplant thrives with minimal care</p>
-                <button>See Plant</button>
+                <a href="/product.html"><button>See Plant</button></a>
             </div>
         </div>
         <div class="snake-plant">
