--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House of Plants</title>
     <link rel="icon" type="image/png" sizes="32*32" href="/FINAL-PROJECT/images/icons/logo.png">
-    <link href="/styles/products/products-desktop.css" rel="stylesheet" />
+    <link href="/styles/product/product-desktop.css" rel="stylesheet" />
     <!-- <link href="tablet to be updated" rel="stylesheet" /> -->
     <!-- <link href="mobile to be updated" rel="stylesheet" /> -->
     <script async src="./javascript/productsMain.js"></script>
@@ -65,10 +65,22 @@
 
                 </div>
             </header>
-            <h2>Products</h2>
+
         </div>
     </section>
-    
+    <section class="hero-product-details">
+        <div class="product-details">
+            <img src="" alt="">
+            <div class="details">
+                <h2></h2>
+                <p></p>
+                <p></p>
+                <button></button>
+            </div>
+
+        </div>
+    </section>
+
 
 
     <section class="shop-description">
