--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
     <link href="/styles/product/product-desktop.css" rel="stylesheet" />
     <!-- <link href="tablet to be updated" rel="stylesheet" /> -->
     <!-- <link href="mobile to be updated" rel="stylesheet" /> -->
-    <script async src="./javascript/productsMain.js"></script>
+    <script async src="./javascript/productMain.js"></script>
 </head>
 
 <body>
