--- a/product.html
+++ b/product.html
@@ -70,14 +70,21 @@
     </section>
     <section class="hero-product-details">
         <div class="product-details">
-            <img src="" alt="">
+            <img src="/images/product 2 zz plant/main.jpg" alt="ZZ Plant">
             <div class="details">
-                <h2></h2>
-                <p></p>
-                <p></p>
-                <button></button>
+                <h2>ZZ Plant</h2>
+                <p>The ZZ Plant is characterized by its waxy green leaves above the surface of its potting mix, and its
+                    large potato-like rhizomes underneath. These rhizomes store water, making the ZZ a hardy,
+                    drought-tolerant houseplant that only needs water every few weeks.</p>
+                <h3>20 $</h3>
+                <button>Add to cart</button>
             </div>
 
+        </div>
+        <div class="gallery">
+            <img src="./images/product 2 zz plant/annie-spratt-RDE59yq9pRw-unsplash.jpg" alt="" class="Image">
+            <img src="./images/product 2 zz plant/feey-1gwjE0c3PSQ-unsplash.jpg" alt="" class="Image">
+            <img src="./images/product 2 zz plant/feey-h5hS_f99Vgo-unsplash.jpg" alt="" class="Image tall">
         </div>
     </section>
 
