product list objects updated

--- a/product.html
+++ b/product.html
@@ -80,9 +80,9 @@
 
         </div>
         <div id="gallery">
-            <img src="./images/product 2 zz plant/annie-spratt-RDE59yq9pRw-unsplash.jpg" alt="" class="Image">
-            <img src="./images/product 2 zz plant/feey-1gwjE0c3PSQ-unsplash.jpg" alt="" class="Image">
-            <img src="./images/product 2 zz plant/feey-h5hS_f99Vgo-unsplash.jpg" alt="" class="Image tall">
+            <img  alt="" id="gallery1">
+            <img  alt="" id="gallery2">
+            <img  alt="" id="gallery3" class="tall">
         </div>
     </section>
 
