--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
     <link href="/styles/products/products-desktop.css" rel="stylesheet" />
     <!-- <link href="tablet to be updated" rel="stylesheet" /> -->
     <!-- <link href="mobile to be updated" rel="stylesheet" /> -->
-    <script async src="./javascript/common.js"></script>
+    <script async src="/javascript/common.js"></script>
     <script async src="./javascript/productsMain.js"></script>
 </head>
 
@@ -64,7 +64,7 @@
                                     d="M28.93,29.21H12.27a3.89,3.89,0,1,1,0-7.78h2.65a1.25,1.25,0,1,1,0,2.5H12.27a1.39,1.39,0,1,0,0,2.78H28.93a1.25,1.25,0,0,1,0,2.5Z"
                                     class="color000 svgShape" />
                             </svg></svg>
-                        <div class="item-count hide">1</div>
+                        <div class="item-count hide">0</div>
                     </div>
 
                 </div>
