cart container to be updated

--- a/index.html
+++ b/index.html
@@ -65,7 +65,24 @@
                             </svg></svg>
                             <div class="item-count hide">0</div>
                     </div>
-                    <div class="cart-container hide"></div>  
+                    <div class="cart-container hide">
+                        <div class="cart-header">
+                            <h3>Cart</h3>
+                            <img src="/images/icons/icons8-cancel-50.png" alt="cancel" id="close-cart-container">
+                        </div>
+                        <div class="cart-content">
+                            <ul id="productList">
+                                <li class="hidden">
+                                    <img src="/images/icons/icons8-cancel-50.png" alt="">
+                                    <p>test</p>
+                                    <p>price</p>
+                                    <button><span class="remove-product">-</span>1 <span class="add-product">+</span></button>
+                                </li>
+                                
+                            </ul>
+
+                        </div>
+                    </div>  
             </header>
             <div class="text">
                 <h1>Bring Your Home To Life</h1>
