cart buttons to be updated, error//the button works only on first li on product page, button from cart ko in index

--- a/product.html
+++ b/product.html
@@ -10,15 +10,15 @@
     <link href="/styles/product/product-desktop.css" rel="stylesheet" />
     <!-- <link href="tablet to be updated" rel="stylesheet" /> -->
     <!-- <link href="mobile to be updated" rel="stylesheet" /> -->
-    <script async src="./javascript/productMain.js"></script>
     <script async src="/javascript/common.js"></script>
+    <script async src="./javascript/productMain.js"></script>
 </head>
 
 <body>
     <section class="hero">
         <div class="container">
             <header>
-                <a href="#">
+                <a href="/index.html">
                     <img class="logo" src="images/icons/logo.png" alt="logo">
                 </a>
                 <a href="#" class="hamburger">
@@ -34,14 +34,14 @@
                     </ul>
                 </nav>
                 <div class="shop">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        viewBox="0 0 24 24" width="24px" height="24px">
-                        <g id="surface25410963">
-                            <path
-                                style=" stroke:none;fill-rule:nonzero;fill:rgb(76.078433%,85.882354%,72.941178%);fill-opacity:1;"
-                                d="M 10.613281 4.050781 C 6.394531 4.050781 2.960938 7.519531 2.960938 11.773438 C 2.960938 16.050781 6.394531 19.5 10.613281 19.5 C 12.542969 19.5 14.304688 18.769531 15.65625 17.570312 L 16.085938 18 L 15.695312 18.414062 C 15.46875 18.636719 15.46875 18.992188 15.695312 19.21875 L 19.070312 22.632812 C 19.179688 22.742188 19.3125 22.800781 19.460938 22.800781 C 19.613281 22.800781 19.761719 22.742188 19.855469 22.632812 L 21.355469 21.113281 C 21.5625 20.886719 21.5625 20.53125 21.335938 20.324219 L 17.960938 16.914062 C 17.851562 16.800781 17.71875 16.742188 17.570312 16.742188 C 17.417969 16.742188 17.269531 16.800781 17.175781 16.914062 L 16.78125 17.324219 L 16.351562 16.875 C 17.53125 15.507812 18.261719 13.726562 18.261719 11.773438 C 18.261719 7.519531 14.832031 4.050781 10.613281 4.050781 Z M 10.613281 5.195312 C 14.210938 5.195312 17.136719 8.15625 17.136719 11.792969 C 17.136719 15.429688 14.210938 18.375 10.613281 18.375 C 7.011719 18.375 4.085938 15.429688 4.085938 11.792969 C 4.085938 8.15625 7.011719 5.195312 10.613281 5.195312 Z M 10.632812 7.539062 C 8.851562 7.539062 7.257812 8.679688 6.65625 10.367188 C 6.5625 10.613281 6.695312 10.914062 6.957031 10.988281 C 7.011719 11.007812 7.070312 11.023438 7.125 11.023438 C 7.332031 11.023438 7.519531 10.894531 7.59375 10.6875 C 8.042969 9.394531 9.28125 8.511719 10.632812 8.511719 C 10.894531 8.511719 11.117188 8.289062 11.117188 8.023438 C 11.117188 7.761719 10.894531 7.539062 10.632812 7.539062 Z M 7.070312 12.167969 C 6.804688 12.167969 6.582031 12.375 6.582031 12.65625 L 6.582031 12.730469 C 6.601562 12.992188 6.804688 13.21875 7.085938 13.21875 C 7.351562 13.21875 7.574219 12.992188 7.574219 12.730469 L 7.574219 12.675781 C 7.574219 12.394531 7.367188 12.167969 7.085938 12.167969 Z M 17.585938 18.113281 L 20.175781 20.738281 L 19.460938 21.449219 L 16.875 18.824219 Z M 17.585938 18.113281 " />
-                        </g>
-                    </svg>
+                    <a href="/index.html"><svg xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24" width="24px" height="24px">
+                            <g id="surface25410963">
+                                <path
+                                    style=" stroke:none;fill-rule:nonzero;fill:rgb(76.078433%,85.882354%,72.941178%);fill-opacity:1;"
+                                    d="M 10.613281 4.050781 C 6.394531 4.050781 2.960938 7.519531 2.960938 11.773438 C 2.960938 16.050781 6.394531 19.5 10.613281 19.5 C 12.542969 19.5 14.304688 18.769531 15.65625 17.570312 L 16.085938 18 L 15.695312 18.414062 C 15.46875 18.636719 15.46875 18.992188 15.695312 19.21875 L 19.070312 22.632812 C 19.179688 22.742188 19.3125 22.800781 19.460938 22.800781 C 19.613281 22.800781 19.761719 22.742188 19.855469 22.632812 L 21.355469 21.113281 C 21.5625 20.886719 21.5625 20.53125 21.335938 20.324219 L 17.960938 16.914062 C 17.851562 16.800781 17.71875 16.742188 17.570312 16.742188 C 17.417969 16.742188 17.269531 16.800781 17.175781 16.914062 L 16.78125 17.324219 L 16.351562 16.875 C 17.53125 15.507812 18.261719 13.726562 18.261719 11.773438 C 18.261719 7.519531 14.832031 4.050781 10.613281 4.050781 Z M 10.613281 5.195312 C 14.210938 5.195312 17.136719 8.15625 17.136719 11.792969 C 17.136719 15.429688 14.210938 18.375 10.613281 18.375 C 7.011719 18.375 4.085938 15.429688 4.085938 11.792969 C 4.085938 8.15625 7.011719 5.195312 10.613281 5.195312 Z M 10.632812 7.539062 C 8.851562 7.539062 7.257812 8.679688 6.65625 10.367188 C 6.5625 10.613281 6.695312 10.914062 6.957031 10.988281 C 7.011719 11.007812 7.070312 11.023438 7.125 11.023438 C 7.332031 11.023438 7.519531 10.894531 7.59375 10.6875 C 8.042969 9.394531 9.28125 8.511719 10.632812 8.511719 C 10.894531 8.511719 11.117188 8.289062 11.117188 8.023438 C 11.117188 7.761719 10.894531 7.539062 10.632812 7.539062 Z M 7.070312 12.167969 C 6.804688 12.167969 6.582031 12.375 6.582031 12.65625 L 6.582031 12.730469 C 6.601562 12.992188 6.804688 13.21875 7.085938 13.21875 C 7.351562 13.21875 7.574219 12.992188 7.574219 12.730469 L 7.574219 12.675781 C 7.574219 12.394531 7.367188 12.167969 7.085938 12.167969 Z M 17.585938 18.113281 L 20.175781 20.738281 L 19.460938 21.449219 L 16.875 18.824219 Z M 17.585938 18.113281 " />
+                            </g>
+                        </svg></a>
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
                         height="24px">
 
@@ -64,7 +64,26 @@
                                     d="M28.93,29.21H12.27a3.89,3.89,0,1,1,0-7.78h2.65a1.25,1.25,0,1,1,0,2.5H12.27a1.39,1.39,0,1,0,0,2.78H28.93a1.25,1.25,0,0,1,0,2.5Z"
                                     class="color000 svgShape" />
                             </svg></svg>
-                            <div class="item-count hide">0</div>
+                        <div class="item-count hide">0</div>
+                    </div>
+                    <div class="cart-container hide">
+                        <div class="cart-header">
+                            <h3>Cart</h3>
+                            <img src="/images/icons/icons8-cancel-50.png" alt="cancel" id="close-cart-container">
+                        </div>
+                        <div class="cart-content">
+                            <ul id="productList">
+                            </ul>
+
+                        </div>
+
+                        <div class="total-flex">
+                            <p class="total-cart">Total</p>
+                            <p id="total">0</p>
+                        </div>
+
+
+                        <button class="checkout">Checkout</button>
                     </div>
                 </div>
             </header>
