--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
     <section class="hero">
         <div class="container">
             <header>
-                <a href="#">
+                <a href="/index.html">
                     <img class="logo" src="images/icons/logo.png" alt="logo">
                 </a>
                 <a href="#" class="hamburger">
