--- a/products.html
+++ b/products.html
@@ -113,13 +113,13 @@
     </section>
     <footer>
         <div class="nav-footer">
-            <a href="#">
+            <a href="/index.html">
                 <img class="logo" src="images/icons/footer-logo.png" alt="logo">
             </a>
 
             <nav>
                 <ul>
-                    <li>Home</li>
+                    <li><a href="/index.html">Home</a></li>
                     <li>Easy Care</li>
                     <li>Low Light Plants</li>
                     <li>Pet Friendly Plants</li>
