cart products section in progress

--- a/products.html
+++ b/products.html
@@ -66,6 +66,25 @@
                             </svg></svg>
                         <div class="item-count hide">0</div>
                     </div>
+                    <div class="cart-container hide">
+                        <div class="cart-header">
+                            <h3>Cart</h3>
+                            <img src="/images/icons/icons8-cancel-50.png" alt="cancel" id="close-cart-container">
+                        </div>
+                        <div class="cart-content">
+                            <ul id="productList">
+                            </ul>
+
+                        </div>
+
+                        <div class="total-flex">
+                            <p class="total-cart">Total</p>
+                            <p id="total">0</p>
+                        </div>
+
+
+                        <button class="checkout">Checkout</button>
+                    </div>
 
                 </div>
             </header>
